fix overlapping text on scroll search areas

--- a/src/routes/styles/weighted-table-styles.css
+++ b/src/routes/styles/weighted-table-styles.css
@@ -64,3 +64,7 @@ em {
 p {
     padding: 8px
 }
+
+.searchInput {
+    background-color: var(--color-theme-2) !important;
+}
